--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.x.x",
-    "express": "^4.x.x"
+    "@prisma/client": "^5.0.0",
+    "express": "^4.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.x.x",
-    "@types/node": "^18.x.x",
-    "prisma": "^4.x.x",
-    "ts-node": "^10.x.x",
-    "typescript": "^4.x.x"
+    "@types/express": "^4.0.0",
+    "@types/node": "^18.0.0",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.0.0"
   }
 }
